--- a/src/countryStyling.css
+++ b/src/countryStyling.css
@@ -32,11 +32,21 @@ h3 {
     border: solid 2px ;
     height: 40px;
     border-radius: 40px;
-    padding: 10px;
+    padding: 50px;
+    margin: 40px;
 }
 #homepage-button {
     font-family: 'Cairo', sans-serif;
     font-size: x-large;
     display: block;
     text-align: center;
+}
+.fa-magnifying-glass {
+    width: 50px;
+    height: 40px;
+    border-radius: 50px;
+    background:#cff6f9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
